--- a/contact.html
+++ b/contact.html
@@ -138,10 +138,12 @@
 
     <!-- same top-right nav -->
     <nav class="top-actions">
-      <a class="nav-pill" href="index.html">Home</a>
-      <a class="nav-pill" href="faq.html">FAQ</a>
-      <a class="cta" href="contact.html">Get a Quote</a>
-    </nav>
+  <a class="nav-pill" href="index.html">Home</a>
+  <a class="nav-pill" href="faq.html">FAQ</a>
+  <a class="nav-pill" href="our-work.html">Our Work</a>
+  <a class="cta" href="contact.html">Get a Quote</a>
+</nav>
+
 
     <main class="contact-main">
       <div class="contact-card" id="formCard">
