--- a/faq.html
+++ b/faq.html
@@ -16,6 +16,7 @@
 <nav class="top-actions">
   <a class="nav-pill" href="index.html">Home</a>
   <a class="nav-pill" href="faq.html">FAQ</a>
+  <a class="nav-pill" href="our-work.html">Our Work</a>
   <a class="cta" href="contact.html">Get a Quote</a>
 </nav>
 
@@ -27,6 +28,7 @@
   <footer class="footer-note">Solving Problems Since 2008</footer>
 </body>
 </html>
+
 
 
 
