--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <nav class="top-actions">
   <a class="nav-pill" href="index.html">Home</a>
   <a class="nav-pill" href="faq.html">FAQ</a>
+  <a class="nav-pill" href="our-work.html">Our Work</a>
   <a class="cta" href="contact.html">Get a Quote</a>
 </nav>
+
 
 
   <!-- center slogans -->
