--- a/our-work.html
+++ b/our-work.html
@@ -118,7 +118,7 @@
 
     <main class="work-main">
       <h1 class="work-title">Our Work</h1>
-      <p class="work-subtitle">A few recent builds. Tap any image to zoom.</p>
+      <p class="work-subtitle">A few recent builds.</p>
 
       <!-- Replace the src paths with your real images in /work/ -->
       <section class="gallery" id="gallery">
@@ -131,7 +131,7 @@
       </section>
     </main>
 
-    <footer class="footer-note">More coming soon...</footer>
+    <footer class="footer-note">Solving Problems Since 2008...</footer>
   </div>
 
   <!-- Lightbox -->
@@ -177,3 +177,4 @@
   </script>
 </body>
 </html>
+
