--- a/our-work.html
+++ b/our-work.html
@@ -131,7 +131,7 @@
       </section>
     </main>
 
-    <footer class="footer-note">Solving Problems Since 2008...</footer>
+    <footer class="footer-note">Solving Problems Since 2008</footer>
   </div>
 
   <!-- Lightbox -->
@@ -177,4 +177,5 @@
   </script>
 </body>
 </html>
+
 
