--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Boulder Brothers</title>
+  <meta name="description" content="Custom climbing walls built by climbers, for climbers. Boulder Brothers creates beautiful, durable bouldering and climbing walls—solving problems and inspiring movement since 2008." />
+  <title>Boulder Brothers | Build Together. Climb Together.</title>
+
+
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
